--- a/index.html
+++ b/index.html
@@ -451,22 +451,22 @@
               <tr>
                 <tr class="zone-1">
                   <td>Zone 1</td>
-                <td>102.5 min</td>
+                <td>134.5 min</td>
               </tr>
               <tr>
                  <tr class="zone-2">
                   <td>Zone 2</td>
-                <td>23.5 min</td>
+                <td>34.5 min</td>
               </tr>
               <tr>
                 <tr class="zone-3">
                   <td>Zone 3</td>
-                <td>7.5 min</td>
+                <td>12.75 min</td>
               </tr>
               <tr>
                 <tr class="zone-4">
                   <td>Zone 4</td>
-                <td>5 min</td>
+                <td>18.75 min</td>
               </tr>
               <tr>
                 <tr class="zone-5">
@@ -479,11 +479,11 @@
     <tbody>
       <tr>
         <td><strong>Total Training Time</strong></td>
-        <td>1h 28m</td>
+        <td>3h 30m</td>
       </tr>
       <tr>
         <td><strong>Total Miles</strong></td>
-        <td>4 miles</td>
+        <td>7.75 miles</td>
       </tr>
       <tr>
         <td><strong>VO₂ Max</strong></td>
@@ -491,7 +491,7 @@
       </tr>
       <tr>
         <td><strong>DOMS</strong></td>
-        <td>One Tibialias Anterior knot / cramp Left Leg</td>
+        <td>None</td>
       </tr>
     </tbody>
   </table>
