--- a/workouts.html
+++ b/workouts.html
@@ -693,7 +693,191 @@
 </div>
 </article>
 <!-- Wednesday 1/14/26 – example with one card for today -->
+<article class="card workout-day">
+<div class="workout-day-header">
+<div class="workout-date">Wednesday – 07</div>
+<div class="workout-tag">Daily Training Summary</div>
+</div>
 
+
+<div class="daily-metrics-block">
+<h4>Daily Metrics</h4>
+<ul class="daily-metrics-list">
+<li><strong>Sleep:</strong> 8.25 hrs · Score 97</li>
+<li><strong>HRV:</strong> 52 ms · <strong>Resting HR:</strong> 51 bpm</li>
+<li><strong>VO₂ Max:</strong> 47.2</li>
+<li><strong>Weight:</strong> 176.9 lb · 12.2% BF · Lean Mass 142.3 lb</li>
+<li><strong>DOMS:</strong> - · <strong>Energy:</strong> 9 / 10 · <strong>Stress:</strong> 1 / 10</li>
+<li><strong>Hydration:</strong> Hydrated · <strong>Mood:</strong> 9 / 10</li>
+<li><strong>BCE:</strong> 2356 · <strong>KVAS:</strong> 16</li>
+</ul>
+</div>
+
+
+<div class="sessions-list">
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Strength training</span>
+<span class="session-meta">55 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Dumbell Alternateing overhead press</td>
+<td>4 × 12 @ 15 lb</td>
+<td>120 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>4 rounds of 12</td>
+</tr>
+<tr>
+<td>Kettlebell Curl to Overhead press to Tricep extension</td>
+<td>4 × 12 @ 30 lb</td>
+<td>120 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>4 rounds of 12</td>
+</tr>
+<tr>
+<td>Kettlebell upside down wiper front to back</td>
+<td>4 × 12 @ 10 lb</td>
+<td>120 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>4 rounds of 12</td>
+</tr>
+<tr>
+<td>Kettlebell Hammer curls</td>
+<td>4 × 12 @ 15 lb</td>
+<td>120 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>4 rounds of 12</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>43.75 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>11 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0.25 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>5 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">NSDR Breathing</span>
+<span class="session-meta">20 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>NSDR Breathing</td>
+<td>-</td>
+<td>20 min</td>
+<td>-</td>
+<td>No</td>
+<td>Recovery Raising HRV</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>20 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+</div>
+</article>
 <!-- Thursday 1/15/26 – example with one card for today -->
  
 <!-- Friday 1/16/26 – example with one card for today -->
