--- a/workouts.html
+++ b/workouts.html
@@ -1149,7 +1149,99 @@
 </div>
 </article>
 <!-- Friday 1/16/26 – example with one card for today -->
+<article class="card workout-day">
+<div class="workout-day-header">
+<div class="workout-date">Friday – 07</div>
+<div class="workout-tag">Daily Training Summary</div>
+</div>
 
+
+<div class="daily-metrics-block">
+<h4>Daily Metrics</h4>
+<ul class="daily-metrics-list">
+<li><strong>Sleep:</strong> 8 hrs · Score 96</li>
+<li><strong>HRV:</strong> 78 ms · <strong>Resting HR:</strong> 47 bpm</li>
+<li><strong>VO₂ Max:</strong> 47.2</li>
+<li><strong>Weight:</strong> 177.9 lb · 12.2% BF · Lean Mass 142.3 lb</li>
+<li><strong>DOMS:</strong> - · <strong>Energy:</strong> 9 / 10 · <strong>Stress:</strong> 1 / 10</li>
+<li><strong>Hydration:</strong> Hydrated · <strong>Mood:</strong> 9 / 10</li>
+<li><strong>BCE:</strong> 2470 · <strong>KVAS:</strong> 17</li>
+</ul>
+</div>
+
+
+<div class="sessions-list">
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Treadmill Run / Walk</span>
+<span class="session-meta">25 min · 2.8 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 4</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Treadmill Run / Walk</td>
+<td>-</td>
+<td>25 min</td>
+<td>-</td>
+<td>Yes</td>
+<td>5 min Run 6.7 MPH / 2 min walk 4.0 MPH</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>1.5 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>4.5 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>5.25 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>13.75 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+</div>
+</article>
 <!-- Saturday 1/17/26 – example with one card for today -->
 
 <!-- Sunday 1/18/26 – example with one card for today -->
