--- a/workouts.html
+++ b/workouts.html
@@ -1243,7 +1243,579 @@
 </div>
 </article>
 <!-- Saturday 1/17/26 – example with one card for today -->
+<article class="card workout-day">
+<div class="workout-day-header">
+<div class="workout-date">Saturday – 07</div>
+<div class="workout-tag">Daily Training Summary</div>
+</div>
 
+
+<div class="daily-metrics-block">
+<h4>Daily Metrics</h4>
+<ul class="daily-metrics-list">
+<li><strong>Sleep:</strong> 5.5 hrs · Score 80</li>
+<li><strong>HRV:</strong> 53 ms · <strong>Resting HR:</strong> 54 bpm</li>
+<li><strong>VO₂ Max:</strong> 47.2</li>
+<li><strong>Weight:</strong> 178.4 lb · 12% BF · Lean Mass 143.1 lb</li>
+<li><strong>DOMS:</strong> - · <strong>Energy:</strong> 9 / 10 · <strong>Stress:</strong> 1 / 10</li>
+<li><strong>Hydration:</strong> Hydrated · <strong>Mood:</strong> 9 / 10</li>
+<li><strong>BCE:</strong> 2536 · <strong>KVAS:</strong> 17</li>
+</ul>
+</div>
+
+
+<div class="sessions-list">
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Treadmill Warm up Walk</span>
+<span class="session-meta">9.4 min · 0.62 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Treadmill Warm up Walk</td>
+<td>-</td>
+<td>9.4 min</td>
+<td>-</td>
+<td>Zone 1 Endurance</td>
+<td>Raise VO2 Max session 4 MPH</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>8.25 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>1.15 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Treadmill Run / Walk</span>
+<span class="session-meta">5.4 min · 0.62 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 2</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Treadmill Run / Walk</td>
+<td>-</td>
+<td>5.4 min</td>
+<td>-</td>
+<td>Yes</td>
+<td>Run 6.86 MPH 5:26 1k </td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>3.25 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>2.15 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Treadmill Run / Walk</span>
+<span class="session-meta">5.25 min · 0.62 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 3</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Treadmill Run / Walk</td>
+<td>-</td>
+<td>5.25 min</td>
+<td>-</td>
+<td>Yes</td>
+<td>Run 7.08 MPH 5:16 1k </td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>2.05 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>3.2 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Wall Ball throws no squat</span>
+<span class="session-meta">4.95 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 4</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Wall Ball Throws</td>
+<td>10 × 20 @ 14 lb</td>
+<td>295 sec</td>
+<td>Both</td>
+<td>Wall Ball</td>
+<td>No squat, 14 lbs wall ball throws and catch</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0.95 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>1.75 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>2.25 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Treadmill Cool Down Walk</span>
+<span class="session-meta">10 min · 0.62 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 2</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Treadmill Cool Down Walk</td>
+<td>-</td>
+<td>10 min</td>
+<td>-</td>
+<td>Zone 2 -> 1 Cool down</td>
+<td>Raise VO2 Max session</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>3 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>5.25 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>1.75 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Professional Stretch</span>
+<span class="session-meta">60 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Periformis stretch</td>
+<td>4 × 1</td>
+<td>60 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 second hold each leg</td>
+</tr>
+<tr>
+<td>Hamstring stretch</td>
+<td>4 × 1</td>
+<td>60 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 second hold each set</td>
+</tr>
+<tr>
+<td>Calf Stretch</td>
+<td>4 × 1</td>
+<td>60 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 second hold each leg</td>
+</tr>
+<tr>
+<td>Hip Flexor Stretch</td>
+<td>4 × 1</td>
+<td>60 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 second hold each leg</td>
+</tr>
+<tr>
+<td>Tibialias Anterior Stretch</td>
+<td>4 × 1</td>
+<td>60 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 second hold each leg</td>
+</tr>
+<tr>
+<td>Quad Stretch</td>
+<td>4 × 1</td>
+<td>60 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 Second Slow Roller</td>
+</tr>
+<tr>
+<td>T-splne / Chest stretch</td>
+<td>4 × 1</td>
+<td>60 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 Second Slow Roller</td>
+</tr>
+<tr>
+<td>Lat / Oblique stretch</td>
+<td>4 × 1</td>
+<td>60 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 Second Slow Roller</td>
+</tr>
+<tr>
+<td>Chest Opener stretch</td>
+<td>4 × 1</td>
+<td>60 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 Second Slow Roller</td>
+</tr>
+<tr>
+<td>Neck and traps stretch</td>
+<td>4 × 1</td>
+<td>60 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 Second Slow Roller</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>60 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">NSDR Breathing</span>
+<span class="session-meta">20 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>NSDR Breathing</td>
+<td>-</td>
+<td>20 min</td>
+<td>-</td>
+<td>No</td>
+<td>Recovery Raising HRV</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>20 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+</div>
+</article>
 <!-- Sunday 1/18/26 – example with one card for today -->
 
 <!-- end WEEK 7 Workouts -->
